--- a/package.json
+++ b/package.json
@@ -7,11 +7,50 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "generateIconFontComponent": "./node_modules/.bin/generate-icon ./src/themes/Fonts/styles.css --componentName=health-appicon --fontFamily=health-appicon > ./node_modules/react-native-vector-icons/health-appicon.js",
+    "copyIconFontToNodeModules": "cp ./src/themes/Fonts/font/health-appicon.ttf ./node_modules/react-native-vector-icons/Fonts/health-appicon.ttf",
+    "createFontToNodeModule": "cp ./src/themes/Fonts/fonts/*.ttf ./node_modules/react-native-vector-icons/Fonts",
+    "createIconFont": "yarn run generateIconFontComponent && yarn run copyIconFontToNodeModules && yarn run createFontToNodeModule"
   },
   "dependencies": {
+    "@react-native-community/art": "^1.2.0",
+    "@react-native-community/async-storage": "1.6.2",
+    "@react-native-community/checkbox": "^0.5.7",
+    "@react-native-community/picker": "^1.8.1",
+    "@react-native-google-signin/google-signin": "^6.0.0",
+    "axios": "^0.21.1",
+    "immutable": "^4.0.0-rc.12",
+    "lodash": "^4.17.20",
     "react": "17.0.2",
-    "react-native": "0.66.3"
+    "react-native": "0.66.3",
+    "react-native-base64": "^0.2.1",
+    "react-native-chart-kit": "^6.11.0",
+    "react-native-circular-progress": "^1.3.7",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-dialog": "^8.0.1",
+    "react-native-gesture-handler": "^1.9.0",
+    "react-native-google-fit": "^0.16.2",
+    "react-native-i18n": "^2.0.15",
+    "react-native-image-base64": "^0.1.4",
+    "react-native-image-picker": "^3.8.0",
+    "react-native-momosdk": "^1.3.7",
+    "react-native-navigation": "^7.24.0",
+    "react-native-progress": "^4.1.2",
+    "react-native-render-html": "^5.0.1",
+    "react-native-rsa-native": "^2.0.3",
+    "react-native-svg": "^9.12.0",
+    "react-native-swiper": "^1.6.0-nightly.5",
+    "react-native-toast-message": "^1.4.9",
+    "react-native-torch": "^1.2.0",
+    "react-native-vector-icons": "^8.0.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-persist-seamless-immutable": "^2.0.0",
+    "redux-saga": "^1.1.3",
+    "seamless-immutable": "^7.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
