--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-dialog": "^8.0.1",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-google-fit": "^0.16.2",
     "react-native-i18n": "^2.0.15",
     "react-native-image-base64": "^0.1.4",
